--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,11 @@ android {
     compileSdk 32
 
     defaultConfig {
+
+        configurations.all {
+            resolutionStrategy { force 'androidx.appcompat:appcompat-resources:1.5.0' }
+        }
+
         applicationId "com.pushcode"
         minSdk 21
         targetSdk 32
@@ -13,6 +18,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
 
     buildTypes {
