--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,34 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-    id 'com.android.application' version '7.2.1' apply false
-    id 'com.android.library' version '7.2.1' apply false
+buildscript {
+
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+        maven {
+            url 'https://android-sdk.is.com/'
+        }
+        jcenter()
+        maven { url 'https://jitpack.io' }
+        maven { url 'https://maven.google.com' }
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:4.1.3'
+
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+        maven {
+            url 'https://android-sdk.is.com/'
+        }
+        maven { url 'https://maven.google.com' }
+        jcenter()// Warning: this repository is going to shut down soon
+    }
 }
 
 task clean(type: Delete) {
