--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     signingConfigs {
         release {
-            storeFile file("/keystore.jks")
+            storeFile file("/app/keystore.jks")
             storePassword "kishan@123"
             keyAlias "kishan"
             keyPassword "kishan@123"
